# Multi-Domain-Geometric-Representation-Learning-for-Structured-Events

./: .gitattributes  .gitignore  LICENSE  README.MD  linux_requirements.txt  main.py  pyproject.toml  run_experiments.sh  windows_requirements.txt
data/raw/: sample_1000000.parquet  sample_2000000.parquet  sample_500.parquet  sample_500000.parquet  sample_600000.parquet  sample_700000.parquet  sample_800000.parquet  sample_900000.parquet
notebooks/: EDA.ipynb  GDELT_metadata.ipynb  multi_domain_architecture.ipynb
scripts/: generate_smoke_configs.py
src/: __init__.py
src/config/: __init__.py  paths.py
src/models/: __init__.py  tabular_encoder.py
src/preprocessing/: __init__.py  cleaning.py  entity_construction.py  splitting.py
src/representation/: __init__.py
tests/: conftest.py  test_actor_encoders.py  test_bert_dataset.py  test_bert_model.py  test_categorical_cardinalities.py  test_class_weights.py  test_cleaning_runner.py  test_data_cleaner.py  test_edge_rules.py  test_encoding.py  test_entity_construction.py  test_entity_construction_helpers.py  test_entity_runner.py  test_fusion.py  test_geo_encoders.py  test_gnn_model.py  test_graph_indexing.py  test_graph_io.py  test_heterogeneous_gnn.py  test_homogeneous_gnn.py  test_idempotency.py  test_loading.py  test_metrics.py  test_missing_value_handler.py  test_mlp.py  test_mlp_dataset.py  test_riemannian.py  test_splitter.py  test_splitting_runner.py  test_tabular_encoder.py  test_tabular_runner.py  test_temporal_encoders.py  test_text_builder.py  test_text_runner.py  test_transformers.py
(+132 files in other folders)
