[project]
name = "gdelt-experiments"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch==2.4.1",
    "torchvision==0.19.1",
    "torch-geometric==2.7.0",
    "torch-sparse==0.6.18",
    "pyg-lib==0.4.0",
    "transformers==4.57.3",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "pyarrow==23.0.1",
    "pyyaml==6.0.3",
    "tqdm==4.67.1",
    "networkx==3.6.1",
    "ipykernel==7.1.0",
    "pillow>=12.2.0",
    "idna>=3.15",
    "urllib3>=2.7.0",
]

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-cov"]

[tool.uv]
package = false
find-links = ["https://data.pyg.org/whl/torch-2.4.0+cu121.html"]
no-build-package = ["torch-sparse", "pyg-lib"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
